# pick

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md
crates/agent/: Cargo.toml
crates/agent/src/: agent_config.rs  agent_registry.rs  auth.rs  core.rs  extensions.rs  inter_agent.rs  lib.rs  session.rs  skills.rs  system_prompt.rs  tools.rs  utils.rs
crates/agent/src/command/: review.rs
crates/agent/src/core/: agent_mode.rs  config.rs  diagnostics.rs  events.rs  hooks.rs  message_queue.rs  state.rs
crates/agent/src/core/agent_loop/: mod.rs  runner.rs  stream.rs  tools.rs
crates/agent/src/core/compaction/: mod.rs  types.rs
crates/agent/src/extensions/: runner.rs  types.rs  wrapper.rs
crates/agent/src/extensions/loader/: factory.rs  mod.rs
crates/agent/src/permission/: approval.rs  audit.rs  disabled.rs  evaluate.rs  external_dir.rs  fs_policy.rs  manager.rs  mod.rs  network.rs  profiles.rs
crates/agent/src/permission/exec_policy/: mod.rs
crates/agent/src/permission/guardian/: mod.rs
crates/agent/src/prompt_history/: manager.rs  mod.rs  traits.rs
crates/agent/src/session/: entries.rs  goal.rs  storage.rs  title.rs
crates/agent/src/settings/: manager.rs  mod.rs  types.rs
crates/agent/src/templates/: mod.rs
crates/agent/src/tools/: bash.rs  edit.rs  find.rs  goal.rs  grep.rs  ls.rs  question.rs  read.rs  registry.rs  todo_plan.rs  webfetch.rs  write.rs
crates/agent/src/tools/subagent/: mod.rs  (+2 more)
crates/ai/: Cargo.toml  build.rs
crates/ai/models/providers/: amazon-bedrock.json  anthropic.json  azure-openai-responses.json  cerebras.json  cloudflare-ai-gateway.json  cloudflare-workers-ai.json  deepseek.json  faux.json  fireworks.json  github-copilot.json  google-vertex.json  google.json  groq.json  huggingface.json  kimi-coding.json  minimax-cn.json  minimax.json  mistral.json  moonshotai-cn.json  moonshotai.json  nvidia.json  openai-codex.json  openai.json  opencode-go.json  opencode.json  openrouter-images.json  openrouter.json  together.json  vercel-ai-gateway.json  xai.json  xiaomi-token-plan-ams.json  xiaomi-token-plan-cn.json  xiaomi-token-plan-sgp.json  xiaomi.json  zai-coding-cn.json  zai.json
crates/ai/src/: image_models.rs  images.rs  images_openrouter.rs  lib.rs  models.rs  registry.rs  retry.rs  sse.rs  types.rs  utils.rs
crates/ai/src/oauth/: mod.rs  types.rs
crates/ai/src/providers/: azure_openai_responses.rs  cloudflare.rs  faux.rs  flatten.rs  github_copilot_headers.rs  google.rs  google_vertex.rs  mistral.rs  mod.rs  openai_codex_responses.rs  openai_prompt_cache.rs  openai_responses.rs  openai_responses_shared.rs  register.rs  simple_options.rs  transform_messages.rs
crates/ai/src/types/: content.rs  message.rs  model.rs  provider.rs  stream.rs  tool.rs
crates/ai/src/utils/: diagnostics.rs  env_api_keys.rs  event_stream.rs  hash.rs  headers.rs  json_parse.rs  models.rs  oauth.rs  oauth_page.rs  overflow.rs  sanitize_unicode.rs  typebox_helpers.rs  validation.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: args.rs  config.rs  core.rs  main.rs  modes.rs  notification.rs  title_prompt.txt
crates/cli/src/cli/: config_selector.rs  file_processor.rs  initial_message.rs  list_models.rs  mod.rs  package_manager_cli.rs  session_picker.rs
crates/cli/src/core/: agent_mode.rs  agent_session.rs  auth_guidance.rs  auth_storage.rs  bash_executor.rs  defaults.rs  diagnostics.rs  embedded_docs.rs  env_api_keys.rs  event_bus.rs  exec.rs  footer_data_provider.rs  http_dispatcher.rs  install_context.rs  messages.rs  migrations.rs  model_registry.rs  model_resolver.rs  output_guard.rs  plan_file.rs  prompt_templates.rs  provider_display_names.rs  proxy.rs  resolve_config_value.rs  resource_loader.rs  sdk.rs  session.rs  session_analysis.rs  session_cwd.rs  session_manager.rs  session_resources.rs  skills.rs  slash_commands.rs  source_info.rs  system_prompt.rs  telemetry.rs  timings.rs  update_action.rs  updates.rs  workspace_trust.rs
crates/cli/src/modes/: audit.rs  print.rs  rpc.rs  serve.rs
crates/cli/src/utils/: ansi.rs  changelog.rs  child_process.rs  clipboard.rs  frontmatter.rs  fs_watch.rs  git.rs  html.rs  image.rs  mod.rs  paths.rs  shell.rs  syntax_highlight.rs  tools_manager.rs  user_agent.rs  version_check.rs  windows_self_update.rs
crates/cli/themes/: dark.json  light.json
crates/loop/: Cargo.toml  test.json
crates/loop/src/: commands.rs  goal.rs  integration.rs  lib.rs  manager.rs  scheduler.rs  tools.rs  types.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: client.rs  config.rs  conversion.rs  lib.rs  manager.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: lib.rs  manager.rs  traits.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: agent_routes.rs  approval.rs  comments_routes.rs  docs.rs  events.rs  files.rs  git.rs  lib.rs  loop_routes.rs  mcp_routes.rs  plugins.rs  project_manager.rs  project_routes.rs  prompt_history_routes.rs  pty.rs  rest.rs  routes.rs  session.rs  settings_routes.rs  spa.rs  sse.rs  swagger.html  ws.rs
crates/slack-bot/: Cargo.toml
crates/slack-bot/src/: main.rs  slack_types.rs
crates/tui/: Cargo.toml
crates/tui/src/: autocomplete.rs  components.rs  fuzzy.rs  insert_history.rs  keybindings.rs  keyboard_enhancement.rs  keys.rs  kill_ring.rs  lib.rs  live_wrap.rs  native_modifiers.rs  paste_burst.rs  stdin_buffer.rs  syntax_highlight.rs  terminal.rs  terminal_image.rs  terminal_manager.rs  undo_stack.rs
crates/tui/src/app/: handlers.rs  mod.rs  render.rs  tree.rs  types.rs
crates/tui/src/components/: image_component.rs  question.rs  select.rs  settings_list.rs  theme.rs  truncated_text.rs  update_prompt.rs
crates/tui/src/custom_terminal/: diff.rs  mod.rs
crates/tui/src/editor/: mod.rs  types.rs
crates/tui/src/markdown_render/: mod.rs  styles.rs  writer.rs
crates/tui/src/utils/: ansi.rs  char.rs  mod.rs  slice.rs  wrap.rs
crates/tui/src/wrapping/: adaptive.rs  helpers.rs  mod.rs  options.rs  standard.rs  url.rs
tauri/: Cargo.toml  tauri.conf.json
tauri/capabilities/: default.json
tauri/icons/: icon.icns
tauri/src/: lib.rs  main.rs
(+278 files in other folders)
