[package]
name = "pick-desktop"
version = "0.1.16"
description = "Pick Desktop App"
authors.workspace = true
edition.workspace = true

[lib]
name = "pick_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
pick-agent = { path = "../crates/agent" }
pick-server = { path = "../crates/server" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-deep-link = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
