[package]
name = "pick-ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
base64.workspace = true
futures.workspace = true
pin-project.workspace = true
regex.workspace = true
url.workspace = true
async-trait.workspace = true
indexmap.workspace = true
chrono.workspace = true
sha2.workspace = true
hmac.workspace = true
hex.workspace = true
uuid.workspace = true
lazy_static = "1"
urlencoding = "2"
jsonschema = "0.28"

[build-dependencies]
serde_json = { workspace = true }
