[package]
name = "pick-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pick"
path = "src/main.rs"

[dependencies]
pick-ai = { path = "../ai" }
pick-agent = { path = "../agent" }
pick-mcp = { path = "../mcp" }
pick-tui = { path = "../tui" }
pick-sandbox = { path = "../sandbox" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
reqwest.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
futures.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true
regex.workspace = true
pathdiff.workspace = true
dirs = "6"
crossterm.workspace = true
ratatui.workspace = true
similar.workspace = true
dunce.workspace = true
unicode-normalization.workspace = true
url.workspace = true
syntect.workspace = true
image.workspace = true
kamadak-exif.workspace = true
base64.workspace = true
arboard.workspace = true
nix = { version = "0.29", default-features = false, features = ["signal", "process"] }
fs2 = "0.4"
notify-rust = "4"
