[package]
name = "pick-loop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

# Internal crates
pick-ai = { path = "../ai" }
pick-agent = { path = "../agent" }

[dev-dependencies]
tempfile = "3"
