[package]
name = "pick-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pick-agent = { path = "../agent" }
pick-ai = { path = "../ai" }
rmcp = { version = "1", features = [
    "client", "transport-child-process", "transport-io",
    "transport-streamable-http-client-reqwest", "client-side-sse",
] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
futures.workspace = true
