[package]
name = "pick-sandbox"
version.workspace = true
edition = "2024"
description = "Cross-platform sandbox for process filesystem and network isolation"

[features]
default = []

[dependencies]
pick-agent = { path = "../agent" }

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_System_Console",
]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
