[package]
name = "pick-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pick-agent = { path = "../agent" }
pick-ai = { path = "../ai" }
pick-loop = { path = "../loop" }
pick-mcp = { path = "../mcp" }
async-trait = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust-embed = "8"
mime_guess = "2"
tokio-stream = { workspace = true }
futures = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
utoipa = { workspace = true }
tokio-tungstenite = { workspace = true }
anyhow = { workspace = true }
portable-pty = "0.9.0"


